force-app/main/default/objects/ABHFL_Multiple_LAN__mdt/ABHFL_Multiple_LAN__mdt.object-meta.xml
<CustomObject>
    <label>ABHFL Multiple LAN</label>
    <pluralLabel>ABHFL Multiple LAN</pluralLabel>
</CustomObject>