force-app/main/default/objects/ABHFL_Multiple_LAN__mdt/fields/Asset_Additional_Fields__c.field-meta.xml
<CustomField>
    <fullName>Asset_Additional_Fields__c</fullName>
    <label>Bureau History Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>