force-app/main/default/objects/ABHFL_Multiple_LAN__mdt/fields/Asset_Fields__c.field-meta.xml
<CustomField>
    <fullName>Asset_Fields__c</fullName>
    <label>Asset Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>