force-app/main/default/objects/ABHFL_Multiple_LAN__mdt/fields/Impact_Option_Logic__c.field-meta.xml
<CustomField>
    <fullName>Impact_Option_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Impact Option Logic Change for specific Case Sub Types.</description>
    <label>Impact Option Logic</label>
    <type>Checkbox</type>
</CustomField>