force-app/main/default/objects/ABHFL_Multiple_LAN__mdt/fields/Stages_Allowing_Add_Rows__c.field-meta.xml
<CustomField>
    <fullName>Stages_Allowing_Add_Rows__c</fullName>
    <label>Stages Allowing Add Rows</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>