force-app/main/default/objects/ABHFL_Multiple_LAN__mdt/fields/Stages_Allowing_Fetch_All__c.field-meta.xml
<CustomField>
    <fullName>Stages_Allowing_Fetch_All__c</fullName>
    <label>Stages Allowing Fetch All</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>