force-app/main/default/objects/ABHFL_Multiple_LAN__mdt/fields/Stages_Allowing_Field_Edit__c.field-meta.xml
<CustomField>
    <fullName>Stages_Allowing_Field_Edit__c</fullName>
    <label>Stages Allowing Field Edit</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>