force-app/main/default/objects/ABHFL_Multiple_LAN__mdt/fields/Stages_Allowing_File_Upload__c.field-meta.xml
<CustomField>
    <fullName>Stages_Allowing_File_Upload__c</fullName>
    <label>Stages Allowing File Upload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>